Cropping fixed!

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -92,7 +92,7 @@ progress {
   background-position: center;
 }
 
-#cropper, .cropping #crop {
+#cropper, /*.cropping #crop*/ {
   display: none;
 }
 
